--- a/frontend/src/Components/MediaUploader.module.scss
+++ b/frontend/src/Components/MediaUploader.module.scss
@@ -17,16 +17,10 @@
     transform: translate(-50%, -50%);
 }
 
-.overlay {
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0,0,0,0.5);
-    display: block;
-    position: fixed;
-    z-index: 999;
-    content: "";
-    left: 0;
-    top: 0;
+@media screen and (max-width: 600px) {
+    .container {
+        width: 90%;
+    }
 }
 
 .controls {
